# hexl

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CODEOWNERS  CPPLINT.cfg  README.md
.github/workflows/: github-ci.yml
benchmark/: CMakeLists.txt  bench-eltwise-add.cpp  bench-eltwise-cmp-add.cpp  bench-eltwise-cmp-sub-mod.cpp  bench-eltwise-fma.cpp  bench-eltwise-mult.cpp  bench-ntt.cpp  bench-poly-cmp-add.cpp  bench-poly-cmp-sub-mod.cpp  bench-poly-fma.cpp  bench-poly-mult.cpp  bench_ntt.cpp  bench_poly_cmp_add.cpp  bench_poly_cmp_sub_mod.cpp  bench_poly_fma.cpp  bench_poly_mult.cpp  main.cpp
cmake/: FindSphinx.cmake  IntelLatticeConfig.cmake.in  cpu_features.cmake  easylogging.cmake  gbenchmark.cmake  gflags.cmake  gtest.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py.in  index.rst
example/: CMakeLists.txt  README.md  example.cpp
intel-lattice/: CMakeLists.txt
intel-lattice/eltwise/: eltwise-add-mod-avx512.cpp  eltwise-add-mod-avx512.hpp  eltwise-add-mod-internal.hpp  eltwise-add-mod.cpp  eltwise-cmp-add-avx512.hpp  eltwise-cmp-add-internal.hpp  eltwise-cmp-add.cpp  eltwise-cmp-sub-mod-avx512.hpp  eltwise-cmp-sub-mod-internal.hpp  eltwise-cmp-sub-mod.cpp  eltwise-fma-avx512.cpp  eltwise-fma-avx512.hpp  eltwise-fma-internal.hpp  eltwise-fma.cpp  eltwise-mult-mod-avx512.cpp  eltwise-mult-mod-avx512.hpp  eltwise-mult-mod-internal.hpp  eltwise-mult-mod.cpp
intel-lattice/include/intel-lattice/: intel-lattice.hpp
intel-lattice/include/intel-lattice/eltwise/: eltwise-add-mod.hpp  eltwise-cmp-add.hpp  eltwise-cmp-sub-mod.hpp  eltwise-fma.hpp  eltwise-mult-mod.hpp
intel-lattice/include/intel-lattice/ntt/: ntt.hpp
intel-lattice/include/intel-lattice/poly/: poly-cmp-add.hpp  poly-cmp-sub-mod.hpp  poly-fma.hpp  poly-mult.hpp
intel-lattice/include/intel-lattice/util/: util.hpp
intel-lattice/ntt/: fwd-ntt-avx512.cpp  fwd-ntt-avx512.hpp  good.txt  inv-ntt-avx512.cpp  inv-ntt-avx512.hpp  ntt-avx512-util.hpp  ntt-avx512.cpp  ntt-avx512.hpp  ntt-internal.cpp  ntt-internal.hpp  ntt.cpp  ntt.hpp
intel-lattice/number-theory/: number-theory.cpp  number-theory.hpp
intel-lattice/poly/: poly-cmp-add-avx512.hpp  poly-cmp-add-internal.hpp  poly-cmp-add.cpp  poly-cmp-add.hpp  poly-cmp-sub-mod-avx512.cpp  poly-cmp-sub-mod-avx512.hpp  poly-cmp-sub-mod-internal.hpp  poly-cmp-sub-mod.cpp  poly-cmp-sub-mod.hpp  poly-fma-avx512.cpp  poly-fma-avx512.hpp  poly-fma-internal.hpp  poly-fma.cpp  poly-fma.hpp  poly-mult-avx512.cpp  poly-mult-avx512.hpp  poly-mult-internal.hpp  poly-mult.cpp  poly-mult.hpp
intel-lattice/util/: aligned-allocator.hpp  avx512-util.hpp  avx512_util.hpp  check.hpp  cpu-features.hpp  util-internal.hpp  util.hpp
logging/: CMakeLists.txt  logging.cpp  logging.hpp
ntt/: CMakeLists.txt  avx512_util.hpp  ntt-avx512.cpp  ntt-avx512.hpp  ntt.cpp  ntt.hpp  number-theory.cpp  number-theory.hpp  util.hpp
src/: CMakeLists.txt  avx512_util.hpp  ntt-avx512.cpp  ntt.cpp  ntt.hpp  number-theory.cpp  number-theory.hpp  util.hpp
src/logging/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp  test-avx512-util.cpp  test-eltwise-add-mod.cpp  test-eltwise-cmp-add.cpp  test-eltwise-cmp-sub-mod.cpp  test-eltwise-fma.cpp  test-eltwise-mult-mod.cpp  test-ntt.cpp  test-number-theory.cpp  test-poly-cmp-add.cpp  test-poly-cmp-sub-mod.cpp  test-poly-fma.cpp  test-poly-mult.cpp  test-public-api.cpp  test-util.hpp  test_avx512_util.cpp  test_ntt.cpp  test_number_theory.cpp  test_poly_cmp_add.cpp  test_poly_cmp_sub_mod.cpp  test_poly_fma.cpp  test_poly_mult.cpp  test_util.hpp
